@@ -1,0 +1,42 @@
+// $Id$
+/*
+ * Header file for humanize routines
+ *
+ * ==========================================================================
+ *
+ *  Copyright (C) 2008 Thorsten Klose (tk@midibox.org)
+ *  Licensed for personal non-commercial use only.
+ *  All other rights reserved.
+ * 
+ * ==========================================================================
+ */
+
+#ifndef _SEQ_HUMANIZE2_H
+#define _SEQ_HUMANIZE2_H
+
+#include "seq_layer.h"
+
+/////////////////////////////////////////////////////////////////////////////
+// Global definitions
+/////////////////////////////////////////////////////////////////////////////
+
+
+/////////////////////////////////////////////////////////////////////////////
+// Global Types
+/////////////////////////////////////////////////////////////////////////////
+
+
+/////////////////////////////////////////////////////////////////////////////
+// Prototypes
+/////////////////////////////////////////////////////////////////////////////
+
+extern s32 SEQ_HUMANIZE2_Init(u32 mode);
+
+extern s32 SEQ_HUMANIZE2_Event(u8 track, u8 step, seq_layer_evnt_t *e);
+
+
+/////////////////////////////////////////////////////////////////////////////
+// Export global variables
+/////////////////////////////////////////////////////////////////////////////
+
+#endif /* _SEQ_HUMANIZE2_H */
