@@ -65,27 +65,28 @@ typedef enum {
   SEQ_UI_PAGE_MANUAL = 35,
   SEQ_UI_PAGE_FX_ECHO = 36,
   SEQ_UI_PAGE_FX_HUMANIZE = 37,
-  SEQ_UI_PAGE_FX_LIMIT = 38,
-  SEQ_UI_PAGE_FX_LFO = 39,
-  SEQ_UI_PAGE_FX_DUPL = 40,
-  SEQ_UI_PAGE_FX_LOOP = 41,
-  SEQ_UI_PAGE_FX_SCALE = 42,
-  SEQ_UI_PAGE_UTIL = 43,
-  SEQ_UI_PAGE_BPM = 44,
-  SEQ_UI_PAGE_OPT = 45,
-  SEQ_UI_PAGE_SAVE = 46,
-  SEQ_UI_PAGE_METRONOME = 47,
-  SEQ_UI_PAGE_MIDI = 48,
-  SEQ_UI_PAGE_MIDIMON = 49,
-  SEQ_UI_PAGE_SYSEX = 50,
-  SEQ_UI_PAGE_CV = 51,
-  SEQ_UI_PAGE_DISK = 52,
-  SEQ_UI_PAGE_ETH = 53,
-  SEQ_UI_PAGE_TRKLIVE = 54,
-  SEQ_UI_PAGE_PATTERN_RMX = 55,
-  SEQ_UI_PAGE_BOOKMARKS = 56,
-  SEQ_UI_PAGE_INFO = 57,
-  SEQ_UI_PAGE_LAST__UNIMPLEMENTED = 58
+  SEQ_UI_PAGE_FX_HUMANIZE2 = 38,
+  SEQ_UI_PAGE_FX_LIMIT = 39,
+  SEQ_UI_PAGE_FX_LFO = 40,
+  SEQ_UI_PAGE_FX_DUPL = 41,
+  SEQ_UI_PAGE_FX_LOOP = 42,
+  SEQ_UI_PAGE_FX_SCALE = 43,
+  SEQ_UI_PAGE_UTIL = 44,
+  SEQ_UI_PAGE_BPM = 45,
+  SEQ_UI_PAGE_OPT = 46,
+  SEQ_UI_PAGE_SAVE = 47,
+  SEQ_UI_PAGE_METRONOME = 48,
+  SEQ_UI_PAGE_MIDI = 49,
+  SEQ_UI_PAGE_MIDIMON = 50,
+  SEQ_UI_PAGE_SYSEX = 51,
+  SEQ_UI_PAGE_CV = 52,
+  SEQ_UI_PAGE_DISK = 53,
+  SEQ_UI_PAGE_ETH = 54,
+  SEQ_UI_PAGE_TRKLIVE = 55,
+  SEQ_UI_PAGE_PATTERN_RMX = 56,
+  SEQ_UI_PAGE_BOOKMARKS = 57,
+  SEQ_UI_PAGE_INFO = 58,
+  SEQ_UI_PAGE_LAST__UNIMPLEMENTED = 59
 } seq_ui_page_t;
 
 #define SEQ_UI_PAGES (SEQ_UI_PAGE_LAST__UNIMPLEMENTED)
